<resources>
    <string name="app_name">BandTest</string>
    <string name="connect_device">Connection device</string>
    <string name="disconnect_device">Disconnect device</string>
    <string name="device_syncall_data">Synchronize all data</string>
    <string name="unbind_device">Tie removing equipment</string>
    <string name="device_read_battery">Read battery</string>
    <string name="device_read_version">Read Version</string>
    <string name="device_open_time">Open time</string>
    <string name="device_off_time">Shut off time</string>
    <string name="device_query_rate">Query heart rate</string>
    <string name="device_query_sleep">Query sleep</string>
    <string name="device_query_statistic_sleep">Query statistics sleep</string>
    <string name="device_query_breath">Query Breath</string>
    <string name="func_mine_text_band_band">My PEGASI Band</string>
    <string name="save">Save</string>
    <string name="sleep_score_unit">ps</string>
    <string name="item_pager_hour">h</string>
    <string name="item_pager_minute">m</string>
    <string name="item_pager_length_sleep">Sleep Time</string>
    <string name="no_sleep_data">no sleep data</string>
    <string name="item_pager_sleep_time">sleep time</string>
    <string name="item_pager_go_sleep_min">minute</string>
    <string name="sleep_efficiency">sleep efficiency</string>
    <string name="item_pager_deep_sleep">Deep Sleep</string>
    <string name="item_pager_light_sleep">Light Sleep</string>
    <string name="rem">REM</string>
    <string name="no_rate_data">No HR data</string>
    <string name="max_hr">HrMAX</string>
    <string name="c_p_m">c.p.m.</string>
    <string name="item_pager_bpm">BPM</string>
    <string name="item_pager_rest_heartRate">RHR</string>
    <string name="bpm">BPM</string>
    <string name="item_pager_sober">Awake</string>
    <string name="heart_rate_period_graph">Heart rate cycle diagram</string>
    <string name="sleep_period_graph">Sleep cycle diagram</string>
    <string name="func_mcob_text_slps_dura" formatted="false">%s PM- %s AM</string>
    <string name="generate_data">Generate data</string>
    <string name="delete_data">Delete all data</string>
    <string name="upgrade_device">Upgrade Device</string>
    <string name="device_sync_time">Synchronization time</string>
    <string name="device_read_time">Read sync time</string>
    <string name="skip_next">Next interface</string>
    <string name="device_firmware_update">Firmware update</string>
    <string name="device_start_storage">Start storage</string>
    <string name="device_erasure">Erasure</string>
    <string name="read_data_draw">Read data drawed</string>
    <string name="long_press_stop">长按停止</string>
    <string name="second_to_stop">秒后停止</string>
</resources>
