<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:scrollbarStyle="insideOverlay"
                android:scrollbarFadeDuration="1000"
                android:textSize="15sp"
                android:textColor="#0e0e0e"
                />
            <Button
                android:id="@+id/btn_connect"
                android:text="@string/connect_device"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_disconnect"
                android:text="@string/disconnect_device"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_sync_data"
                android:text="@string/device_syncall_data"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_read_battery"
                android:text="@string/device_read_battery"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_read_version"
                android:text="@string/device_read_version"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_open_time"
                android:text="@string/device_open_time"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_off_time"
                android:text="@string/device_off_time"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_sync_time"
                android:text="@string/device_sync_time"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_read_time"
                android:text="@string/device_read_time"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_firmware_update"
                android:text="@string/device_firmware_update"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_skip_next"
                android:text="@string/skip_next"
                style="@style/Button.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
